kubernetes/generatedManifests/test/infrastructure/cert-manager/1-manifest/admissionregistration.k8s.io_v1-validatingwebhookconfiguration-default-cert-manager-trust.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: cert-manager/cert-manager-trust
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"admissionregistration.k8s.io/v1","kind":"ValidatingWebhookConfiguration","metadata":{"annotations":{"cert-manager.io/inject-ca-from":"cert-manager/cert-manager-trust"},"labels":{"app":"cert-manager-trust","app.kubernetes.io/instance":"cert-manager-trust","app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/name":"cert-manager-trust","app.kubernetes.io/version":"v0.2.0","helm.sh/chart":"cert-manager-trust-v0.2.0"},"name":"cert-manager-trust"},"webhooks":[{"admissionRevi [...]
  labels:
    app: cert-manager-trust
    app.kubernetes.io/instance: cert-manager-trust
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/name: cert-manager-trust
    app.kubernetes.io/version: v0.2.0
    helm.sh/chart: cert-manager-trust-v0.2.0
  name: cert-manager-trust
webhooks:
- admissionReviewVersions:
  - v1
  - v1beta1
  clientConfig:
    service:
      name: cert-manager-trust
      namespace: cert-manager
      path: /validate
  failurePolicy: Fail
  name: trust.cert-manager.io
  rules:
  - apiGroups:
    - trust.cert-manager.io
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - '*/*'
  sideEffects: None
  timeoutSeconds: 5
